Closed Bug 1506019 Opened 7 years ago Closed 7 years ago

Main app process exited normally | application crashed [@ mozilla::recordreplay::RestoreCheckpointAndResume(mozilla::recordreplay::CheckpointId const&)]

Categories

(DevTools :: Debugger, defect, P5)

defect

Tracking

(firefox65 fixed)

RESOLVED FIXED
Firefox 65
Tracking Status
firefox65 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: bhackett1024)

References

Details

(Keywords: intermittent-failure, Whiteboard: [retriggered])

Attachments

(1 file)

Filed by: rgurzau [at] mozilla.com https://treeherder.mozilla.org/logviewer.html#?job_id=210736543&repo=mozilla-inbound https://queue.taskcluster.net/v1/task/RbqwAzPkRGi3l3gKkbDZZQ/runs/0/artifacts/public/logs/live_backing.log 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/devtools-components/arrow.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/debugger/domain.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/debugger/folder.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/debugger/pause.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/debugger/stepOver.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/debugger/stepIn.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/debugger/stepOut.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/debugger/disable-pausing.svg."] 20:42:27 INFO - Console message: [JavaScript Error: "Security Error: Content at resource://devtools/client/debugger/new/dist/debugger.css may not load or link to chrome://devtools/skin/images/help.svg."] 20:42:27 INFO - Buffered messages finished 20:42:27 INFO - TEST-UNEXPECTED-FAIL | devtools/client/debugger/new/test/mochitest/browser_dbg_rr_breakpoints-02.js | Test timed out - 20:42:27 INFO - Removing tab. 20:42:27 INFO - Waiting for event: 'TabClose' on [object XULElement]. 20:42:27 INFO - Got event: 'TabClose' on [object XULElement]. 20:42:27 INFO - Tab removed and finished closing 20:42:27 INFO - GECKO(1957) | MEMORY STAT | vsize 5098MB | residentFast 1038MB | heapAllocated 134MB 20:42:27 INFO - TEST-OK | devtools/client/debugger/new/test/mochitest/browser_dbg_rr_breakpoints-02.js | took 45386ms
Flags: needinfo?(bhackett1024)
Summary: Intermittent devtools/client/debugger/new/test/mochitest/browser_dbg_rr_breakpoints-02.js | Test timed out - → Main app process exited normally | application crashed [@ mozilla::recordreplay::RestoreCheckpointAndResume(mozilla::recordreplay::CheckpointId const&)]
Attached patch patchSplinter Review
Another call needs to be handled after diverging on the socket transport service thread.
Assignee: nobody → bhackett1024
Flags: needinfo?(bhackett1024)
Attachment #9024068 - Flags: review?(lsmyth)
Attachment #9024068 - Flags: review?(lsmyth) → review+
Pushed by bhackett@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/305c901c0ebb Handle close() calls after diverging from the recording, r=lsmyth.
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: