Bug 1506019 - Handle close() calls after diverging from the recording, r=lsmyth.